# agentforge

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  demo_code_review.py  pyproject.toml  run_forge_local.py
.github/workflows/: test.yml
agentforge/: __init__.py  analyzer.py  cli.py  core.py  curriculum.py  environment.py  generator.py  local_agent.py  rewards.py
configs/: code_review.yaml  customer_support.yaml
tests/: test_local_agent.py
